bk_ida/gccida/g3/find_mem_givs
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5897:1: error: use of undeclared identifier 'induction_1'
induction_1 *v12; // rbp 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5897:14: error: use of undeclared identifier 'v12'
induction_1 *v12; // rbp 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5937:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)) ) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5939:22: error: expected expression
v12 = ( induction_1 *)xmalloc( 0xA8uLL); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5939:9: error: use of undeclared identifier 'induction_1'
v12 = ( induction_1 *)xmalloc( 0xA8uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5939:1: error: use of undeclared identifier 'v12'
v12 = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5942:1: error: use of undeclared identifier 'v12'
v12, 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/loop.c:5954:1: error: use of undeclared identifier 'v12'
v12->mem = x; 
^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_mem_givs/src/obj/loop.o] Error 1
